lab03/15/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-demo-stable-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
spec:
  rules:
  - host: canary-demo.com
    http:
      paths:
      - backend:
          serviceName: canary-demo-canary
          servicePort: 80
